# Methodverse-sds

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test.yml
ci/: android_emulator_script.sh
include/: operation_policy.h  parameter.h  parameter_defs.h  parameter_defs1.h  parameter_registry.h  primitive_operators.h  primitive_operators1.h  primitive_operators_add.h  primitive_operators_mul.h  tags.h
include/methodverse/parameter/: operation_policy.h  parameter.h  tags.h
src/: main.cpp  parameter.cpp
src/parameter/: CMakeLists.txt
toolchains/: android-arm64.cmake  linux-wsl.cmake
tools/: clean.py  generate_vscode_files.py
tst/: CMakeLists.txt  operation_policy_test.cpp  parameter_defs_test.cpp  parameter_test.cpp  parameterbase_test.cpp  primitive_operators_test.cpp  primitive_operators_test1.cpp
